--- a/src/main/resources/static/test.html
+++ b/src/main/resources/static/test.html
@@ -35,34 +35,82 @@
                     <h4 class="modal-title">编辑{{book}}章节内容</h4>
                 </div>
                 <div class="modal-body">
-                    <form class="form-horizontal" id="contform" @submit.prevent="submit1()" method="post" >
-
-                        <div>
-
-                            <!-- Nav tabs -->
-                            <ul class="nav nav-tabs" role="tablist">
-                                <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
-                                <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Profile</a></li>
-                                <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages</a></li>
-                                <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a></li>
-                            </ul>
-
-                            <!-- Tab panes -->
-                            <div class="tab-content">
-                                <div role="tabpanel" class="tab-pane active" id="home">第一页</div>
-                                <div role="tabpanel" class="tab-pane" id="profile">第二页</div>
-                                <div role="tabpanel" class="tab-pane" id="messages">第三页</div>
-                                <div role="tabpanel" class="tab-pane" id="settings">第四页</div>
-                            </div>
-
-                        </div>
-
-
-                        <div class="modal-footer text-center" style="margin: auto; width: 150px;">
-                            <button type="submit" class="btn btn-primary">保存</button>
-                            <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                        </div>
-                    </form>
+					<div>
+						<ul class="nav nav-tabs" role="tablist">
+							<li role="presentation" class="active"><a href="#allChap" aria-controls="allChap" role="tab" data-toggle="tab">章节表</a></li>
+							<li role="presentation"><a href="#addChap" aria-controls="addChap" role="tab" data-toggle="tab">新增</a></li>
+						</ul>
+						<div class="tab-content">
+							<!-- 章节表 -->
+							<div role="tabpanel" class="tab-pane active" id="allChap">
+								<table class="table table-hover table-bordered lh" >
+								    <tr>
+								        <th>
+								            <input type="checkbox" v-model="chap_allId" @change="chap_all()"> 全选
+								        </th>
+								        <th>章节</th>
+								        <th>操作</th>
+								    </tr>
+								    <tr v-for="(li, index) in xPage.dataList" id="data">
+										<td>
+											<input type="checkbox" :value="li.id" v-model="xPage.ids">
+											&nbsp;&nbsp;&nbsp;&nbsp;{{index + ((xPage.pageIndex - 1) * xPage.pageSize + 1)}}
+										</td>
+								        <td>{{li.genre}}</td>
+								        <td>
+								            <div class="btn-group  btn-group-xs" role="group">
+												<button type="button" class="btn btn-primary btn-lg btn-danger" @click="chap_del(li.id)">
+												    <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+												    删除
+												</button>
+												<button type="button"  class="btn btn-primary btn-lg btn-warning" @click="chap_updt(li)" href="#changeChap" aria-controls="changeChap" role="tab" data-toggle="tab">
+												    <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+												    修改
+												</button>
+								            </div>
+								        </td>
+								    </tr>
+								</table>
+							</div>
+							<!-- 新增章节 -->
+							<div role="tabpanel" class="tab-pane" id="addChap">
+								<form class="form-horizontal" id="contform" @submit.prevent="submit1()" method="post" >
+									<div class="form-group">
+										<label for="chapter" class="col-sm-3 control-label">章节:</label>
+										<div class="col-sm-8">
+											<select class="form-control" v-model="chap" id="chapter" @change="chapter()">
+												<option value="" >未选择</option>
+												<option :value="li" v-for="li in content">第 {{li.serial}} 章</option>
+											</select>
+											<div id="inputChap"></div>
+										</div>
+									</div>
+									<div class="form-group">
+										<label for="title" class="col-sm-3 control-label">标题:</label>
+										<div class="col-sm-8">
+											<input type="text" maxlength="20" class="form-control" v-model="title" id="title" placeholder="请输入章节标题">
+											<div id="inputTitle"></div>
+										</div>
+									</div>
+									<div class="form-group">
+										<label for="cont" class="col-sm-3 control-label">内容:</label>
+										<div class="col-sm-8">
+											<textarea class="form-control" rows="10" placeholder="请输入文章内容" v-model="cont" id="cont"></textarea>
+											<div id="inputCont"></div>
+										</div>
+									</div>
+									<div class="modal-footer text-center" style="margin: auto; width: 150px;">
+										<button type="submit" class="btn btn-primary">提交</button>
+										<button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+									</div>
+								</form>
+							</div>
+							<!-- 修改章节 -->
+							<div role="tabpanel" class="tab-pane" id="changeChap">
+								修改
+							</div>
+						</div>
+					</div>
                 </div>
             </div>
         </div>
